--- a/se491project/war/stylesheets/openid.css
+++ b/se491project/war/stylesheets/openid.css
@@ -1,4 +1,4 @@
-﻿body {
+body {
 	font-family: Arial;
 }
 
@@ -59,7 +59,7 @@ form.openid fieldset div {
 	font-family: arial;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
-	background: #DCDCDC url(images/openID/fadegrey.png);
+	background: #DCDCDC url(/images/openID/fadegrey.png);
 	padding: 10px;
 	display: inline-block
 }
@@ -71,7 +71,7 @@ form.openid input[type='submit'] {
 .openid_logo {
 	color: #F7931E;
 	padding: 6px 0px 8px 28px;
-	background: url(images/openID/openidico.png) no-repeat
+	background: url(/images/openID/openidico.png) no-repeat
 }
 
 #openid_login {
