--- a/se491project/war/stylesheets/openid.css
+++ b/se491project/war/stylesheets/openid.css
@@ -61,7 +61,9 @@ form.openid fieldset div {
 	-webkit-border-radius: 4px;
 	background: #DCDCDC url(/images/openID/fadegrey.png);
 	padding: 10px;
+	float: left;
 	display: inline-block
+	
 }
 
 form.openid input[type='submit'] {
