--- a/se491project/war/stylesheets/footer.css
+++ b/se491project/war/stylesheets/footer.css
@@ -1,5 +1,5 @@
 #footer {
-	background-color:#BBE;
+	background-color:#66CCCC;
 	border:  none;	
 	font:  12px Verdana, sans-serif;
 	padding-top:7px;
