--- a/se491project/war/stylesheets/BasicStyle.css
+++ b/se491project/war/stylesheets/BasicStyle.css
@@ -1,9 +1,15 @@
 @CHARSET "ISO-8859-1";
 
+body
+{
+	font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+	text-rendering: optimizeLegibility;
+}
 h1.header
 {
 	color:#003366;
 }
+
 ul
 {
     list-style-type: none;
@@ -38,4 +44,15 @@ ul.menu
 ul.menu li
 {
 	display:inline;
+}
+
+input[type="submit"] 
+{ 
+	background-color: #3399CC; 
+	border: 1px solid #006699;
+	color:#FFFFFF;
+	border-radius:25px;
+	width: auto;
+	font-size: 15px; 
+	padding: 5px 20px 5px;
 }
