hacked the opentok module to work + slight visual adjustments

--- a/se491project/war/stylesheets/opentok.css
+++ b/se491project/war/stylesheets/opentok.css
@@ -4,6 +4,14 @@
 	width: 0;
 }
 
+#conferenceContainer > *{
+	float:left;
+}
+
 #userDashboard {
-	float:right;
+	width: 100px;
+}
+
+.dashboardButton {
+	width: 72px;
 }
