a first attempt to styling video conferencing and chat

--- a/se491project/war/stylesheets/opentok.css
+++ b/se491project/war/stylesheets/opentok.css
@@ -5,9 +5,11 @@
 }
 
 #conferenceContainer {
+	display: block;
+	float: left;
     margin-left: auto;
     margin-right: auto;
-    width: 500px;
+    width: 600px;
 }
 
 #conferenceContainer > * {
@@ -15,7 +17,8 @@
 }
 
 #userDashboard {
-    width: 50px;
+    width: 30px;
+    padding-left: 20px;
 }
 
 .dashboardButton {
@@ -25,4 +28,30 @@
 #speakRequests {
     clear: both;
     width: 400px;
+}
+
+/*Andy's take on video conference*/
+#subscribers {
+	margin-left:auto;
+	margin-right:auto;
+	width:70%;
+	height:  100%;
+}
+#presenter {
+	width: 400px;
+	margin-left:auto;
+	margin-right:auto;
+}
+.hor{
+	width:500px;
+	height:100px;
+	overflow-x:auto;
+	margin-left:auto;
+	margin-right:auto;
+	white-space: nowrap;
+	overflow:hidden;
+	padding-top:10px;
+}
+.hor:hover {
+	overflow-x: scroll;
 }
