--- a/se491project/war/stylesheets/opentok.css
+++ b/se491project/war/stylesheets/opentok.css
@@ -6,10 +6,11 @@
 
 #conferenceContainer {
 	display: block;
-	float: left;
+	/*float: left;*/
     margin-left: auto;
     margin-right: auto;
-    width: 600px;
+    /*width: 600px;*/
+    width: 50%;
 }
 
 #conferenceContainer > * {
@@ -17,8 +18,8 @@
 }
 
 #userDashboard {
-    width: 30px;
-    padding-left: 20px;
+    width: 10%;
+    padding-left: 15px;
 }
 
 .dashboardButton {
@@ -34,9 +35,16 @@
 #subscribers {
 	margin-left:auto;
 	margin-right:auto;
+	width:85%;
+	height:  100%;
+}
+#myPublisherDiv {
+	margin-left:auto;
+	margin-right:auto;
 	width:70%;
 	height:  100%;
 }
+
 #presenter {
 	width: 400px;
 	margin-left:auto;
