changed the chat to be initialized at page load

--- a/se491project/war/stylesheets/chat.css
+++ b/se491project/war/stylesheets/chat.css
@@ -1,17 +1,17 @@
- #chat {
+#chat {
  	float: right;
 	/*height: 500px;*/
 	border: 1px solid rgb(51, 149, 204);
 	padding: 10px;
- }
+}
  
- #messageDisplay {
+#messageDisplay {
  	width: 300px;
 	height: 180px;
 	overflow-y: auto;
 	overflow-x: hidden;
 	/*border: 1px solid rgb(51, 149, 204);*/
- }
+}
  
  #messageInput {
  	width: 285px;
@@ -25,4 +25,8 @@
 .btn {
 	/*float: left;*/
 	margin-left: -100px;
+}
+
+.slideLeft {
+	float: left;
 }
